added stubs to set intervals at which the textbox will update

--- a/SelfCareReminder/App.config
+++ b/SelfCareReminder/App.config
@@ -3,4 +3,7 @@
 	<connectionStrings>
 		<add name="Default" connectionString="Data Source=c:.\RemindersDB.db;Version=3;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
+	<appSettings>
+		<add key="testkey" value="Testkey String"></add>
+	</appSettings>
 </configuration>
