--- a/SelfCareReminder/App.config
+++ b/SelfCareReminder/App.config
@@ -5,5 +5,6 @@
 	</connectionStrings>
 	<appSettings>
 		<add key="testkey" value="Testkey String"></add>
+		<add key="Interval" value="1000"></add>
 	</appSettings>
 </configuration>
