Added alerts aand finalized some CRUD controls

--- a/SelfCareReminder/App.config
+++ b/SelfCareReminder/App.config
@@ -4,7 +4,7 @@
 		<add name="Default" connectionString="Data Source=c:.\RemindersDB.db;Version=3;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
-		<add key="testkey" value="Testkey String"></add>
-		<add key="Interval" value="60000"></add>
+		<add key="PopupTickInterval" value="60000"></add>
+		<add key="ReminderBubbleListMax" value="5"></add>
 	</appSettings>
 </configuration>
